--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						ArmBot</h1>
 <!--						<p>A free, fully responsive HTML5 + CSS3 site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />-->
 <!--						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p>-->
-							<p> Team Member: Shiqi Sun, Jayson Zhou <br>
+							<p> Team Member: Shiqi Sun, Jayson Zhou <br />
 								Director: George Delagrammatikas, Ph.D
 							</p>
 						<ul class="actions">
